--- a/public_html/css/app.css
+++ b/public_html/css/app.css
@@ -3,32 +3,32 @@ html {
   font: 16px Arial;
 }
 
-Excel.input {
+.Excel input {
   font: 16px Arial;
 }
 
-Excel.td {
+.Excel td {
   border-top: 1px solid black;
   cursor: cell;
   padding: 5px;
 }
 
-Excel.th {
+.Excel th {
   cursor: pointer;
   padding: 5px;
   text-align: left;
 }
 
-Excel.table {
+.Exceltable {
   border: 1px solid black;
   margin: 20px;
 }
 
-Excel.toolbar {
+.Excel .toolbar {
   margin-left: 20px;
 }
 
-Excel.toolbar a, Excel.toolbar button { /* thanks css3buttongenerator.com! */
+.Excel .toolbar a, .Excel .toolbar button { /* thanks css3buttongenerator.com! */
   background: #3498db;
   background-image: linear-gradient(to bottom, #3498db, #2980b9);
   border-radius: 28px;
@@ -41,7 +41,7 @@ Excel.toolbar a, Excel.toolbar button { /* thanks css3buttongenerator.com! */
   margin-right: 5px;
 }
 
-Excel.toolbar a:hover, Excel.toolbar button:hover {
+.Excel .toolbar a:hover, .Excel .toolbar button:hover {
   background: #3cb0fd;
   background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
   text-decoration: none;
